# PhenoMCPServers

./: .gitignore  .gitmodules  README.md  pyproject.toml
.github/workflows/: catalog.yml
agents/fleet-lead/: README.md  agent.yaml
catalog/: registry.yaml
docs/: ARCHITECTURE.md  CHARTER.md  DOGFOOD.md  HEXAKIT_INTEGRATION.md  LANGUAGE-TIERS-AND-ROLES.md  MCP-CATALOG.md  PLAN.md  PRD.md  README-PHENOMCP.md  STATUS.md  WIRING.md
docs/edges/: README.md  mcpforge.md  ops-mcp.md
docs/requirements/: phenomcp-frnfr.md
docs/retire/: RETIRED-MCP-REPOS.md
docs/sessions/: dogfood-fleet-lead-2026-06-17.md
docs/spikes/: ts7-hexakit-binding.md  zig-mojo-mcp.md
plugins/phenotype-bundle/: README.md  mcp.json  plugin.yaml
schemas/: language-tiers.schema.json  registry.schema.json
scripts/: fleet_burndown.sh  validate_bundle_wiring.py  validate_catalog.py  validate_fork_parents.py  validate_stale_patterns.py
servers/forge3-bridge/: .gitignore  README.md  forge3_bridge_server.py  forge3_cli.py  pyproject.toml  requirements.txt
servers/forge3-bridge/tests/: test_server.py
servers/pheno-org/: README.md  pheno_org_server.py  pyproject.toml
servers/pheno-org/tests/: test_pheno_org_tools.py
servers/substrate/: README.md  SPEC.md  pyproject.toml
skills/catalog-wiring/: SKILL.md  skill.yaml
skills/forge3-bridge/: SKILL.md  skill.yaml
skills/github-fork-policy/: SKILL.md  skill.yaml
skills/hermes-tweet-signal/: SKILL.md  skill.yaml
skills/language-tier-picker/: SKILL.md  skill.yaml
skills/mcp-boundary-guard/: SKILL.md  skill.yaml
skills/phenodag-claim/: SKILL.md  skill.yaml
tests/: test_bundle_wiring.py  test_hexakit_template.py  test_mcp_server_ts7_template.py
(+19 files in other folders)
